--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,26 @@
 
 .main {
   font-family: "Poppins", serif;
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+  display: flex;
 }
 
 .dark {
+  --border-color: rgba(255, 255, 255, 0.16);
+  --secondary-color: rgba(26, 95, 255, 1);
   background-color: black;
   color: white;
 }
 
 .light {
+  --border-color: rgba(214, 214, 214, 1);
+  --secondary-color: rgba(177, 177, 177, 1);
   background-color: white;
   color: black;
 }
