--- a/src/components/common/Toggle.module.css
+++ b/src/components/common/Toggle.module.css
@@ -14,6 +14,7 @@
     align-items: center;
     transition: all 0.3s ease-in 0s;
     background-color: var(--secondary-color);
+    cursor: pointer;
 }
 
 .toggle {
