--- a/src/components/dashboard/DashboardHeader.module.css
+++ b/src/components/dashboard/DashboardHeader.module.css
@@ -10,16 +10,58 @@
     font-family: 'Open sans', sans-serif;
 }
 
+/* Workspace bar and dropdown */
 .workspace {
-    border: 1px solid var(--border-color);
-    border-radius: 6px;
-    padding: 10px;
-    width: 300px;
-    text-align: center;
+    text-align: left;
     font-weight: 500;
     margin-right: 5%;
+    position: relative;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
+.workspace, .menu {
+    min-width: 300px;
+    border-radius: 6px;
+    border: 1px solid var(--border-color);
+}
+
+.workspace > * {
+    margin: 0;
+}
+
+.workspace img {
+    float: right;
+}
+
+.icon {
+    float: right;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.menu {
+    background-color: var(--primary-background);
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: inherit;
+}
+
+.menu > * {
+    margin: 0;
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid var(--border-color);
+    cursor: pointer;
+}
+
+.logout {
+    color: rgba(255, 165, 76, 1);
+    border-bottom: none;
+}
+
+/*Share */
 .share {
     background-color: rgba(26, 95, 255, 1);
     padding: 10px 20px;
@@ -29,4 +71,5 @@
     border: none;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
 }
