--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -23,36 +23,6 @@
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
+    margin: 20px 0;
 }
 
-.folder {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 5px;
-    padding: 10px;
-    border-radius: 6px;
-    background-color: var(--border-color);
-    min-width: 200px;
-}
-
-.folder:first-child {
-    width: fit-content;
-    min-width: unset;
-    padding: 10px 15px;
-}
-
-.folder > * {
-    cursor: pointer;
-}
-
-.folder > p {
-    margin: 0;
-    flex: 1;
-}
-
-.selection {
-    background-color: #ffffff;
-    color: rgba(24, 24, 27, 1);
-    border: 1px solid rgba(31, 31, 35, 1);
-}
