--- a/src/components/dashboard/FolderStack.module.css
+++ b/src/components/dashboard/FolderStack.module.css
@@ -1,3 +1,7 @@
+.container {
+    position: relative;
+}
+
 .folder {
     display: flex;
     align-items: center;
@@ -30,4 +34,11 @@
     background-color: #ffffff;
     color: rgba(24, 24, 27, 1);
     border: 1px solid rgba(31, 31, 35, 1);
+}
+
+.popup {
+    position: absolute;
+    z-index: 1;
+    top: 60px;
+    left: 215px;
 }
