--- a/src/components/common/Loading.module.css
+++ b/src/components/common/Loading.module.css
@@ -9,6 +9,7 @@
   border: 2px solid var(--border-color);
   background-color: var(--primary-background);
   border-radius: 8px;
+  margin: auto;
 }
 
 .spinner {
