--- a/src/components/workspace/NavBar.module.css
+++ b/src/components/workspace/NavBar.module.css
@@ -4,7 +4,7 @@
   border-bottom: 1px solid var(--border-color);
   padding: 15px;
   width: 100%;
-  height: fit-content;
+  height: 10%;
   box-sizing: border-box;
 }
 
