feat(fun, style): Add Publish form page ui and working
refactor(fun): add unique name check for input fields in workspace

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,7 @@
     background-color: rgba(50, 50, 50, 1);
     border-radius: 10px;
 }
+
+.light ::-webkit-scrollbar-thumb {
+    background-color: rgba(177, 177, 177, 1);
+}
