--- a/src/components/publish/FormField.module.css
+++ b/src/components/publish/FormField.module.css
@@ -73,7 +73,7 @@ input::-webkit-inner-spin-button {
   cursor: pointer;
 }
 
-:global(:dark) .send {
+:global(.dark) .send {
   background-color: rgba(119, 119, 119, 1);
 }
 
