--- a/src/components/workspace/Flow.module.css
+++ b/src/components/workspace/Flow.module.css
@@ -1,10 +1,11 @@
 .container {
-    height: 90%;
+    height: 100vh;
     background-color: var(--primary-background);
     display: flex;
     gap: 20px;
     box-sizing: border-box;
     padding: 25px;
+    padding-top: 7%;
 }
 
 .container * {
