--- a/src/components/workspace/NavBar.module.css
+++ b/src/components/workspace/NavBar.module.css
@@ -4,8 +4,9 @@
   border-bottom: 1px solid var(--border-color);
   padding: 15px;
   width: 100%;
-  height: 10%;
   box-sizing: border-box;
+  position: fixed;
+  background-color: var(--secondary-background);
 }
 
 .container * {
@@ -13,32 +14,34 @@
   font-weight: 600;
 }
 
-.left, .menu {
-    width: 45%;
+.left,
+.menu {
+  width: 45%;
 }
-
 
 .input {
-    color: rgba(118, 118, 118, 0.82);
-    margin: 5px;
+  color: rgba(118, 118, 118, 0.82);
+  margin: 5px;
 }
 
-.input, .menu > button {
+.input,
+.menu > button {
   padding: 5px 15px;
   border-radius: 4px;
   border: none;
 }
 
 :global(.dark) .input {
-    background-color: rgba(55, 55, 62, 1);
+  background-color: rgba(55, 55, 62, 1);
 }
 
 :global(.light) .input {
-    border: 1px solid rgba(214, 214, 214, 1);
-    background-color: transparent;
+  border: 1px solid rgba(214, 214, 214, 1);
+  background-color: transparent;
 }
 
-.view, .menu {
+.view,
+.menu {
   display: flex;
   gap: 10px;
   align-items: center;
@@ -50,31 +53,31 @@
 }
 
 .selected {
-    color: rgba(126, 166, 255, 1);
-    border: 1px solid rgba(126, 166, 255, 1);
-    border-radius: 6px;
+  color: rgba(126, 166, 255, 1);
+  border: 1px solid rgba(126, 166, 255, 1);
+  border-radius: 6px;
 }
 
 .menu > button {
-    cursor: pointer;
-    color: rgba(255, 255, 255, 1);
-    font-size: 1em;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 1);
+  font-size: 1em;
 }
 
 .menu {
-    gap: 25px;
-    justify-content: flex-end;
+  gap: 25px;
+  justify-content: flex-end;
 }
 
 .share {
-    background-color: rgba(26, 95, 255, 1);
+  background-color: rgba(26, 95, 255, 1);
 }
 
 .save {
-    background-color: rgba(74, 222, 128, 0.8);
+  background-color: rgba(74, 222, 128, 0.8);
 }
 
 .close {
-    height: 34px;
-    cursor: pointer;
+  height: 34px;
+  cursor: pointer;
 }
