--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -85,3 +85,28 @@ p.error {
     margin: 10px;
     cursor: pointer;
 }
+
+@media (max-width: 1200px) {
+    .form {
+        width: 40%;
+        min-width: 400px;
+    }
+}
+
+@media (max-width: 768px) {
+    .form {
+        width: 50%;
+        min-width: 300px;
+    }
+}
+
+@media (max-width: 425px) {
+    .form {
+        width: 95%;
+        min-width: 150px;
+    }
+
+    .form, .container {
+        padding: 10px;
+    }
+}
