--- a/src/components/user/User.module.css
+++ b/src/components/user/User.module.css
@@ -50,6 +50,7 @@
 
 .form > * {
     width: 25%;
+    min-width: 280px;
     font-family: 'Poppins', serif;
     font-size: 0.875em;
     text-align: center;
@@ -72,10 +73,14 @@
     border: none;
     cursor: pointer;
     box-sizing: border-box;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 40px;
+}
+
+.submit > p {
+    flex: 1;
 }
 
 input.submit {
@@ -86,8 +91,6 @@ input.submit {
     background-color: #FFFFFF;
     padding: 2.5px;
     border-radius: 50%;
-    margin-left: 15px;
-    margin-right: 25px;
 }
 
 .back {
@@ -98,6 +101,7 @@ input.submit {
 .form {
   flex: 1;
   width: 100%;
+  z-index: 100;
 }
 
 p.footer {
@@ -109,4 +113,51 @@ p.footer {
 .footer > span {
     color: #1A5FFF;
     cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+    .form > * {
+        width: 35%;
+    }
+
+    .triangle {
+        left: 5%;
+    }
+}
+
+@media (max-width: 1024px) {
+    .form > * {
+        width: 35%;
+    }
+
+    .triangle {
+        left: 5%;
+    }
+}
+
+@media (max-width: 768px) {
+    .form {
+        padding-bottom: 50px;
+    }
+
+    .form > * {
+        width: 35%;
+    }
+
+    .triangle {
+        top: 0;
+    }
+
+}
+
+@media (max-width: 425px) {
+    .form > * {
+        width: 40%;
+    }
+
+    .main {
+        padding: 10px;
+    }
+
+
 }
