--- a/src/components/workspace/Flow.module.css
+++ b/src/components/workspace/Flow.module.css
@@ -5,7 +5,7 @@
     gap: 20px;
     box-sizing: border-box;
     padding: 25px;
-    padding-top: 7%;
+    padding-top: 100px;
 }
 
 .container * {
@@ -14,6 +14,7 @@
 
 .sidepanel {
     width: 25%;
+    min-width: 350px;
 }
 
 .workspace {
@@ -28,6 +29,7 @@
 
 .workspace > * {
     width: 25%;
+    min-width: 300px;
 }
 
 .start {
