--- a/src/components/workspace/SidePanel.module.css
+++ b/src/components/workspace/SidePanel.module.css
@@ -27,6 +27,7 @@
   box-sizing: border-box;
   padding: 10px;
   width: 48%;
+  min-width: 145px;
   border-radius: 8px;
   display: flex;
   align-items: center;
