--- a/src/pages/other/index.module.css
+++ b/src/pages/other/index.module.css
@@ -39,4 +39,5 @@
     cursor: pointer;
     box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.2) inset;
     font-weight: 500;
+    font-size: 1em;
 }
