--- a/src/components/workspace/Response.module.css
+++ b/src/components/workspace/Response.module.css
@@ -1,5 +1,10 @@
+.outer {
+    height: 100%;
+    display: flex;
+}
+
 .container {
-    min-height: 100%;
+  min-height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -58,16 +63,16 @@
 }
 
 .piechart p {
-    margin: 5px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 1.25em;
+  margin: 5px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.25em;
 }
 
 .noresponse {
-    font-family: 'Inter';
-    font-size: 3.25em;
-    color: rgba(105, 105, 105, 0.45);
-    margin: auto;
-    height: 100%;
+  font-family: "Inter";
+  font-size: 3.25em;
+  color: rgba(105, 105, 105, 0.45);
+  margin: auto;
+  height: 100%;
 }
