--- a/src/components/workspace/Response.module.css
+++ b/src/components/workspace/Response.module.css
@@ -53,7 +53,7 @@
 .responses {
   padding: 20px;
   box-sizing: border-box;
-  height: 50vh;
+  max-height: 50vh;
   width: 90vw;
   overflow: auto;
 }
